FIX diacrititcs being cutoff in input card templates (#4049)

--- a/ts/reviewer/reviewer.scss
+++ b/ts/reviewer/reviewer.scss
@@ -71,6 +71,7 @@ pre {
     width: 100%;
     // https://anki.tenderapp.com/discussions/beta-testing/1854-using-margin-auto-causes-horizontal-scrollbar-on-typesomething
     box-sizing: border-box;
+    line-height: 1.75;
 }
 
 code#typeans {
